--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: none;
+}
+
 .header,
 .subheader,
 .third_header {
@@ -10,11 +14,20 @@
   font-size: 10px;
   text-align: center;
   font-weight: bold;
-  background-color: rgb(45, 57, 69);
+  margin: 0;
+  padding: 0;
+  line-height: 85px;
+  height: 85px;
+  background-color: #2D3945;
+}
+
+h1 {
+  margin: 0;
 }
 
 .third_header {
-  color: lightgrey;
+  color: silver;
+  margin: 1.5em;
 }
 
 hr {
@@ -54,6 +67,18 @@ input[placeholder] {
   text-align: right;
 }
 
+::-webkit-input-placeholder {
+   font-style: italic;
+}
+:-moz-placeholder {
+   font-style: italic;
+}
+::-moz-placeholder {
+   font-style: italic;
+}
+:-ms-input-placeholder {
+   font-style: italic;
+}
 
 
 textarea:focus {
@@ -69,7 +94,11 @@ button {
   text-align: center;
 }
 
-
+.copyright {
+  text-align: center;
+  font-size: 15px;
+  color: #001a00;
+}
 
 
 
