--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ body {
   font-weight: bold;
   margin: 0;
   padding: 0;
-  line-height: 85px;
-  height: 85px;
+  line-height: 80px;
+  height: 80px;
   background-color: #2D3945;
 }
 
@@ -44,12 +44,17 @@ width: 90%;
 }
 
 form {
-  padding: 10px 20px;
+  padding: 5px 30px 30px 0px;
   max-width: 300px;
+  margin: 10px 7px 5px 5px;
 }
 
 fieldset {
   border: none;
+}
+
+label {
+  font-size: 17px;
 }
 
 input[type="text"],
@@ -87,6 +92,11 @@ textarea:focus {
 
 .news {
   text-align: left;
+}
+
+.topics {
+  padding-top: 5px;
+  margin: auto;
 }
 
 button {
