--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,8 @@ body {
 .header {
   text-transform: uppercase;
   color: white;
-  font-size: 10px;
+  font-size: 9px;
   text-align: center;
-  font-weight: bold;
   margin: 0;
   padding: 0;
   line-height: 80px;
@@ -31,7 +30,7 @@ h1 {
 }
 
 hr {
-width: 90%;
+width: 85%;
 }
 
 .first_line {
@@ -59,10 +58,11 @@ label {
 
 input[type="text"],
 input[type="email"],
-input[type="telephone"] {
+input[type="telephone"],
+textarea,
+select {
   padding: 15px;
-  margin: 0;
-  margin-bottom: 30px;
+  margin: 15px 0 30px;
   border: none;
   background: #EFF0F2;
   width: 100%;
@@ -85,9 +85,13 @@ input[placeholder] {
    font-style: italic;
 }
 
+select {
+  text-align: start;
+  color: #b8b8b8;
+}
 
-textarea:focus {
-  background-color: #D5D9DC;
+input:focus {
+  background-color: lightgreen;
 }
 
 .news {
@@ -122,5 +126,7 @@ button {
 /* ----- Media Query ----- */
 
 @media (min-width: 768px) {
-
+  form {
+    max-width: 700px;
+  }
 }
