--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  margin: none;
+  margin: 0;
 }
 
 .header,
@@ -141,7 +141,11 @@ button {
 
 /* ----- Media Query ----- */
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
+
+  * {
+    box-sizing: border-box;
+  }
 
   .subheader {
     padding-top: 30px;
@@ -153,25 +157,36 @@ button {
     line-height: 0px;
   }
 
-  .wrapper {
-    display: inline-block;
-    width: 100%;
-  }
-
   form {
-    margin: 0 auto;
+    margin: auto;
+    max-width: 700px;
   }
 
   input[type="text"],
   input[type="email"],
-  input[type="telephone"],
+  input[type="tel"],
   textarea,
   select {
-    max-width: 90%;
+    width: 45%;
+    display: inline-block;
 
   }
 
+  #state {
+    width: 45%;
+    display: inline-block;
+  }
+
+  #zip {
+    width: 30%;
+    display: inline-block;
+  }
+
+  textarea {
+    width: 90%;
+  }
+
   button {
-    width: 100%;
+    width: 90%;
   }
 }
