--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ button {
   }
 
   form {
-    margin: auto;
+    margin: 0 auto;
     max-width: 700px;
   }
 
@@ -202,11 +202,12 @@ button {
 
   .topics {
     display: inline;
+    width: 100%;
   }
 
   textarea {
     width: 90%;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
   }
 
   button {
