--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,9 @@ button {
   text-align: center;
   font-size: 25px;
   line-height: 60px;
-  width: 115%;
+  width: 100%;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
 .copyright {
